# backend/app/controllers/api/v1/areas_controller.rb
@@ -1,0 +1,13 @@
+module Api
+  module V1
+    class AreasController < ApplicationController
+      def index
+        render json: Discovery::Destinations.call
+      end
+
+      def show
+        render json: Discovery::AreaDetail.call(Area.find_by!(slug: params[:slug]))
+      end
+    end
+  end
+end
